--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -5,7 +5,7 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="<=OKU3OJGM:0JsAypWhKsqbfMODTspB5^7Li;EK_:xwpu2@tT_8voNs:x7q=x?e<"
+play.crypto.secret="<=OKU3OJGM:0JsAypWhKsqbfMODTspB5^7Li;EK_:xwpu2@tT_8voNs:x7q=x?e<"
 
 # The application languages
 # ~~~~~
